Numerous optimizations and tweaks: 1.) much smarter wait/notify synch logic, proven through logged testing; 2.) memory optimization (data structure conversion from LinkedList to ArrayList to minimize Node references with delayed GC); 3.) fixed mandatory wait time between alerts and fixed bug with calculating true runtime of audio clips